Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-25201

Assertion `thd->wsrep_trx_meta.gtid.seqno == (-1)' failed in int wsrep_to_isolation_begin(THD*, const char*, const char*, const TABLE_LIST*, Alter_info*)

Details

    Description

      SET GLOBAL wsrep_replicate_myisam= ON;
      CREATE TEMPORARY TABLE t1 (i INT, PRIMARY KEY pk (i)) ENGINE=MyISAM;
      PREPARE stmt FROM "INSERT INTO t1 (id) SELECT * FROM (SELECT 4 AS i) AS y";
      INSERT INTO t1 VALUES(4);
      

      Leads to:

      10.3.29 eb7c5530eccb7d6782077e5562f5a471d2ccbc01 (Debug)

      mysqld: /test/10.3_dbg/sql/wsrep_mysqld.cc:1867: int wsrep_to_isolation_begin(THD*, const char*, const char*, const TABLE_LIST*, Alter_info*): Assertion `thd->wsrep_trx_meta.gtid.seqno == (-1)' failed.
      

      10.3.29 eb7c5530eccb7d6782077e5562f5a471d2ccbc01 (Debug)

      Core was generated by `/test/GAL_MD150321-mariadb-10.3.29-linux-x86_64-dbg/bin/mysqld --defaults-file='.
      Program terminated with signal SIGABRT, Aborted.
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6)
          at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
      [Current thread is 1 (Thread 0x1464b8aad700 (LWP 1437780))]
      (gdb) bt
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
      #1  0x00005621d33211ee in my_write_core (sig=sig@entry=6) at /test/10.3_dbg/mysys/stacktrace.c:386
      #2  0x00005621d2ad698c in handle_fatal_signal (sig=6) at /test/10.3_dbg/sql/signal_handler.cc:343
      #3  <signal handler called>
      #4  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #5  0x00001464f9c4d859 in __GI_abort () at abort.c:79
      #6  0x00001464f9c4d729 in __assert_fail_base (fmt=0x1464f9de3588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x5621d3411d40 "thd->wsrep_trx_meta.gtid.seqno == (-1)", file=0x5621d3412750 "/test/10.3_dbg/sql/wsrep_mysqld.cc", line=1867, function=<optimized out>) at assert.c:92
      #7  0x00001464f9c5ef36 in __GI___assert_fail (assertion=assertion@entry=0x5621d3411d40 "thd->wsrep_trx_meta.gtid.seqno == (-1)", file=file@entry=0x5621d3412750 "/test/10.3_dbg/sql/wsrep_mysqld.cc", line=line@entry=1867, function=function@entry=0x5621d34131a8 "int wsrep_to_isolation_begin(THD*, const char*, const char*, const TABLE_LIST*, Alter_info*)") at assert.c:101
      #8  0x00005621d2a21c80 in wsrep_to_isolation_begin (thd=thd@entry=0x146478000d90, db_=db_@entry=0x0, table_=table_@entry=0x0, table_list=0x146478011650, alter_info=alter_info@entry=0x0) at /test/10.3_dbg/sql/wsrep_mysqld.cc:1867
      #9  0x00005621d27cfaec in open_tables (thd=thd@entry=0x146478000d90, options=@0x146478005db8: {m_options = DDL_options_st::OPT_NONE}, start=start@entry=0x1464b8aaa918, counter=counter@entry=0x1464b8aaa92c, flags=flags@entry=0, prelocking_strategy=prelocking_strategy@entry=0x1464b8aaaab0) at /test/10.3_dbg/sql/sql_base.cc:4376
      #10 0x00005621d27d001f in open_and_lock_tables (thd=thd@entry=0x146478000d90, options=@0x146478005db8: {m_options = DDL_options_st::OPT_NONE}, tables=<optimized out>, tables@entry=0x146478011650, derived=derived@entry=true, flags=flags@entry=0, prelocking_strategy=prelocking_strategy@entry=0x1464b8aaaab0) at /test/10.3_dbg/sql/sql_base.cc:5128
      #11 0x00005621d28176c4 in open_and_lock_tables (flags=0, derived=true, tables=0x146478011650, thd=0x146478000d90) at /test/10.3_dbg/sql/sql_base.h:503
      #12 mysql_insert (thd=thd@entry=0x146478000d90, table_list=0x146478011650, fields=@0x146478005a20: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x5621d3c1b680 <end_of_list>, last = 0x146478005a20, elements = 0}, <No data fields>}, values_list=@0x146478005a68: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x146478011d70, last = 0x146478011d70, elements = 1}, <No data fields>}, update_fields=@0x146478005a50: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x5621d3c1b680 <end_of_list>, last = 0x146478005a50, elements = 0}, <No data fields>}, update_values=@0x146478005a38: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x5621d3c1b680 <end_of_list>, last = 0x146478005a38, elements = 0}, <No data fields>}, duplic=DUP_ERROR, ignore=false) at /test/10.3_dbg/sql/sql_insert.cc:760
      #13 0x00005621d284a911 in mysql_execute_command (thd=thd@entry=0x146478000d90) at /test/10.3_dbg/sql/sql_parse.cc:4508
      #14 0x00005621d2851bb9 in mysql_parse (thd=thd@entry=0x146478000d90, rawbuf=rawbuf@entry=0x146478011578 "INSERT INTO t1 VALUES(4)", length=length@entry=24, parser_state=parser_state@entry=0x1464b8aac540, is_com_multi=is_com_multi@entry=false, is_next_command=is_next_command@entry=false) at /test/10.3_dbg/sql/sql_parse.cc:7867
      #15 0x00005621d2853278 in wsrep_mysql_parse (thd=thd@entry=0x146478000d90, rawbuf=0x146478011578 "INSERT INTO t1 VALUES(4)", length=24, parser_state=parser_state@entry=0x1464b8aac540, is_com_multi=is_com_multi@entry=false, is_next_command=is_next_command@entry=false) at /test/10.3_dbg/sql/sql_parse.cc:7659
      #16 0x00005621d2854393 in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x146478000d90, packet=packet@entry=0x1464780198f1 "INSERT INTO t1 VALUES(4)", packet_length=packet_length@entry=24, is_com_multi=is_com_multi@entry=false, is_next_command=is_next_command@entry=false) at /test/10.3_dbg/sql/sql_class.h:1139
      #17 0x00005621d285751e in do_command (thd=0x146478000d90) at /test/10.3_dbg/sql/sql_parse.cc:1398
      #18 0x00005621d297ec46 in do_handle_one_connection (connect=connect@entry=0x5621d6201510) at /test/10.3_dbg/sql/sql_connect.cc:1403
      #19 0x00005621d297ee7d in handle_one_connection (arg=0x5621d6201510) at /test/10.3_dbg/sql/sql_connect.cc:1308
      #20 0x00001464fa153609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #21 0x00001464f9d4a293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      10.2.38 (Debug)

      mysqld: /test/10.2_dbg/sql/wsrep_mysqld.cc:1881: int wsrep_to_isolation_begin(THD*, char*, char*, const TABLE_LIST*, Alter_info*): Assertion `thd->wsrep_trx_meta.gtid.seqno == (-1)' failed.
      

      10.2.38 (Debug)

      Core was generated by `/test/GAL_MD150321-mariadb-10.2.38-linux-x86_64-dbg/bin/mysqld --defaults-file='.
      Program terminated with signal SIGABRT, Aborted.
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6)
          at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
      [Current thread is 1 (Thread 0x149b7dd41700 (LWP 1280798))]
      (gdb) bt
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
      #1  0x0000561dd56ee828 in my_write_core (sig=sig@entry=6) at /test/10.2_dbg/mysys/stacktrace.c:382
      #2  0x0000561dd4fe0bb9 in handle_fatal_signal (sig=6) at /test/10.2_dbg/sql/signal_handler.cc:343
      #3  <signal handler called>
      #4  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #5  0x0000149bb3730859 in __GI_abort () at abort.c:79
      #6  0x0000149bb3730729 in __assert_fail_base (fmt=0x149bb38c6588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x561dd57cadf8 "thd->wsrep_trx_meta.gtid.seqno == (-1)", file=0x561dd57cb7f0 "/test/10.2_dbg/sql/wsrep_mysqld.cc", line=1881, function=<optimized out>) at assert.c:92
      #7  0x0000149bb3741f36 in __GI___assert_fail (assertion=assertion@entry=0x561dd57cadf8 "thd->wsrep_trx_meta.gtid.seqno == (-1)", file=file@entry=0x561dd57cb7f0 "/test/10.2_dbg/sql/wsrep_mysqld.cc", line=line@entry=1881, function=function@entry=0x561dd57cc248 "int wsrep_to_isolation_begin(THD*, char*, char*, const TABLE_LIST*, Alter_info*)") at assert.c:101
      #8  0x0000561dd4f68445 in wsrep_to_isolation_begin (thd=thd@entry=0x149b30000d90, db_=db_@entry=0x0, table_=table_@entry=0x0, table_list=0x149b30011270, alter_info=alter_info@entry=0x0) at /test/10.2_dbg/include/mysql/psi/mysql_thread.h:759
      #9  0x0000561dd4d7efb2 in open_tables (thd=thd@entry=0x149b30000d90, options=@0x149b300059f8: {m_options = DDL_options_st::OPT_NONE}, start=start@entry=0x149b7dd3ea58, counter=counter@entry=0x149b7dd3ea6c, flags=flags@entry=0, prelocking_strategy=prelocking_strategy@entry=0x149b7dd3ebf0) at /test/10.2_dbg/sql/sql_base.cc:4258
      #10 0x0000561dd4d7f1e3 in open_and_lock_tables (thd=thd@entry=0x149b30000d90, options=@0x149b300059f8: {m_options = DDL_options_st::OPT_NONE}, tables=<optimized out>, tables@entry=0x149b30011270, derived=derived@entry=true, flags=flags@entry=0, prelocking_strategy=prelocking_strategy@entry=0x149b7dd3ebf0) at /test/10.2_dbg/sql/sql_base.cc:4880
      #11 0x0000561dd4dc0285 in open_and_lock_tables (flags=0, derived=true, tables=0x149b30011270, thd=0x149b30000d90) at /test/10.2_dbg/sql/sql_base.h:507
      #12 mysql_insert (thd=thd@entry=0x149b30000d90, table_list=0x149b30011270, fields=@0x149b300056b8: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x561dd5eea960 <end_of_list>, last = 0x149b300056b8, elements = 0}, <No data fields>}, values_list=@0x149b30005700: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x149b30011950, last = 0x149b30011950, elements = 1}, <No data fields>}, update_fields=@0x149b300056e8: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x561dd5eea960 <end_of_list>, last = 0x149b300056e8, elements = 0}, <No data fields>}, update_values=@0x149b300056d0: {<base_list> = {<Sql_alloc> = {<No data fields>}, first = 0x561dd5eea960 <end_of_list>, last = 0x149b300056d0, elements = 0}, <No data fields>}, duplic=DUP_ERROR, ignore=false) at /test/10.2_dbg/sql/sql_insert.cc:758
      #13 0x0000561dd4dda70c in mysql_execute_command (thd=thd@entry=0x149b30000d90) at /test/10.2_dbg/sql/sql_parse.cc:4221
      #14 0x0000561dd4de1082 in mysql_parse (thd=thd@entry=0x149b30000d90, rawbuf=rawbuf@entry=0x149b30011198 "INSERT INTO t1 VALUES(4)", length=length@entry=24, parser_state=parser_state@entry=0x149b7dd40550, is_com_multi=is_com_multi@entry=false, is_next_command=is_next_command@entry=false) at /test/10.2_dbg/sql/sql_parse.cc:7790
      #15 0x0000561dd4de268b in wsrep_mysql_parse (thd=thd@entry=0x149b30000d90, rawbuf=0x149b30011198 "INSERT INTO t1 VALUES(4)", length=24, parser_state=parser_state@entry=0x149b7dd40550, is_com_multi=is_com_multi@entry=false, is_next_command=is_next_command@entry=false) at /test/10.2_dbg/sql/sql_parse.cc:7582
      #16 0x0000561dd4de3be4 in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x149b30000d90, packet=packet@entry=0x149b300195d1 "INSERT INTO t1 VALUES(4)", packet_length=packet_length@entry=24, is_com_multi=is_com_multi@entry=false, is_next_command=is_next_command@entry=false) at /test/10.2_dbg/sql/sql_class.h:1109
      #17 0x0000561dd4de69d5 in do_command (thd=0x149b30000d90) at /test/10.2_dbg/sql/sql_parse.cc:1381
      #18 0x0000561dd4eebc5f in do_handle_one_connection (connect=connect@entry=0x561dd82f3460) at /test/10.2_dbg/sql/sql_connect.cc:1336
      #19 0x0000561dd4eebe8a in handle_one_connection (arg=0x561dd82f3460) at /test/10.2_dbg/sql/sql_connect.cc:1241
      #20 0x0000149bb3c36609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #21 0x0000149bb382d293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Bug confirmed present in:
      MariaDB: 10.2.38 (dbg), 10.3.29 (dbg)

      Bug (or feature/syntax) confirmed not present in:
      MariaDB: 10.4.19 (dbg), 10.5.10 (dbg), 10.6.0 (dbg)

      Attachments

        Activity

          • 10.4 : bb-10.4-galera-jan
          • 10.6 : bb-10.6-galera-jan
          jplindst Jan Lindström (Inactive) added a comment - 10.4 : bb-10.4-galera-jan 10.6 : bb-10.6-galera-jan

          People

            jplindst Jan Lindström (Inactive)
            ramesh Ramesh Sivaraman
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.